# LightType

./: .gitignore  COUNTRIBUTING.md  README.md  index.html  package-lock.json  package.json  script.js  styles.css  turndown-plugin-gfm.min.js  turndown.min.js
.github/workflows/: build.yml
scripts/: build.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
