[package]
name = "lighttype"
version = "1.0.0"
description = "轻量级Markdown编辑器"
authors = ["JohnChiao75(Miya0823)", "ILoveScratch2"]
edition = "2021"

[lib]
name = "lighttype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.5.2"

[dependencies]
tauri = "2.5.2"
tauri-plugin-shell = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
